2011-12-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/plotpart.q (clusplot.default): xlab, and ylab arguments;
	new 's.x.2d' argument which allows to specify the plot setup in details.
	(clas.snijpunt): also check for NAs in x[1:2,m].
	Suggestions originally from Peter Ruckdeschel

2011-10-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* po/: setup of for translation

2011-09-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* inst/CITATION: update according to state-of-the-art.

2011-08-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.14.1, (not yet released)

	* R/silhouette.R (plot.silhouette): col = <one per cluster> had
	ordering bug.
	* man/silhouette.Rd: added example

2011-06-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.14.0, released to CRAN

	* R/plotpart.q (clusplot.default): use message() and warning()
	appropriately instead of just cat().  Further, add a 'add = FALSE'
	argument which allows *adding* ellipses to an existing plot.

2011-06-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/plotpart.q (clusplot.default): new 'cex' and 'cex.txt', the
	latter for the "point" labels.

2011-05-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/pam.c (cl_pam): trace_lev: also trace the computation of
	dissimilarities (a very expensive part, for large n).

	* R/pam.q (pam): cluster.only=TRUE: if the *computed*
	dissimilarities have NA's the necessary error was not signalled.

2011-03-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/*.Rout.save: update after R-devel's  "scientific()" patch.
	* DESCRIPTION (Version): 1.13.4

2011-02-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.13.3, released to CRAN

2010-12-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/ellipsoidhull.R, *: use "full argument names"

2010-11-09  Martin Maechler  <maechler@stat.math.ethz.ch>
